-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 2.6.0, Qt Creator 2.7.0, Qt Creator 2.8.0
-
None
-
7702ad52ce85e1f44f62b24e0414d81bebcabe88
- open a project
- open a file from the project
- split
- go to projects mode > editor
- set it to use custom settings
- remove the check from "enable mouse navigation"
- check if the mouse navigation is disabled in the editors
--> one of them has it disabled, the rest enabled
The behavior settings should be saved in the document like the other settings.
| For Gerrit Dashboard: QTCREATORBUG-9825 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 61140,2 | Project editor settings: apply to all editors | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |