Project editor settings: apply to all editors

It was only applying the settings to one of the open editors in case of
splits.

Task-number: QTCREATORBUG-9825
Change-Id: Iaa9b92d33f2531e7c5d053270f354f052160acd8
Reviewed-by: Eike Ziller <eike.ziller@digia.com>